<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color_gradient">

    <FrameLayout
        android:id="@+id/editTextbox"
        android:layout_width="380dp"
        android:layout_height="236dp"
        android:background="@color/red_senai_transparente"
        android:ems="10"
        android:inputType="numberDecimal"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <EditText
        android:id="@+id/edit_text_weight2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:inputType="number"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextbox"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <EditText
        android:id="@+id/edit_text_height2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextbox"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/black_senai"
        android:gravity="right"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="0"
            android:text="@string/logo_name"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="4dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/text_bmi3"
        app:layout_constraintTop_toBottomOf="@+id/text_bmi3" />

    <TextView
        android:id="@+id/text_bmi3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="24dp"
        android:text="@string/bmi"
        android:textColor="@color/red_senai"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="Nome do usuário"
        android:textColor="@color/red_senai"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="26dp" />

    <TextView
        android:id="@+id/text_view_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="email@usuario.com.br"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textViewUser"
        app:layout_constraintTop_toBottomOf="@+id/textViewUser" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="297dp"
        android:layout_height="88dp"
        android:layout_marginStart="12dp"
        android:text="@string/go_calculate"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/weight"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextbox"
        app:layout_constraintTop_toTopOf="@+id/editTextbox" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/height"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextbox"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_weight2" />

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="@+id/editTextbox"
        app:layout_constraintEnd_toEndOf="@+id/editTextbox"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="@+id/edit_text_height2"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_height2"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/text_view_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text=" Weight: 74kg"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewUser" />

    <TextView
        android:id="@+id/text_view_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="Height: 1.65"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_view_weight"
        app:layout_constraintTop_toBottomOf="@+id/text_view_weight" />

</androidx.constraintlayout.widget.ConstraintLayout>